@@ -7427,6 +7427,10 @@ void CLASS identify()
     { 16215552, "SAMSUNG",  "S85"             ,1 },
     { 20487168, "SAMSUNG",  "WB550"           ,1 },
     { 24000000, "SAMSUNG",  "WB550"           ,1 },
+    { 9994240, "ptGrey", "GRAS-50S5C" ,0 }, // KC: SUPPORT GRASSHOPPER
+    { 10075968, "JaiPulnix","BB-500CL" ,0 }, // KC: SUPPORT BB-500CL
+    { 10108896, "JaiPulnix","BB-500GE" ,0 }, // KC: SUPPORT BB-500GE
+    { 10036800, "SVS", "SVS625CL" ,0 }, // KC: SUPPORT SVS625 cameralink
     { 12582980, "Sinar",    ""                ,0 },
     { 33292868, "Sinar",    ""                ,0 },
     { 44390468, "Sinar",    ""                ,0 } };
@@ -9023,6 +9027,39 @@ else if (!strcmp(model,"QV-2000UX")) {
     height = 2318;
     width  = 3082;
     raw_width = 4672;
+  }
+  else if (!strcmp(model,"GRAS-50S5C")) {
+   height = 2048;
+   width = 2440;
+   load_raw = &CLASS unpacked_load_raw;
+   data_offset = 0;
+   filters = 0x49494949;
+   order = 0x4949;
+   maximum = 0xfffC;
+  } else if (!strcmp(model,"BB-500CL")) {
+   height = 2058;
+   width = 2448;
+   load_raw = &CLASS unpacked_load_raw;
+   data_offset = 0;
+   filters = 0x94949494;
+   order = 0x4949;
+   maximum = 0x3fff;
+  } else if (!strcmp(model,"BB-500GE")) {
+   height = 2058;
+   width = 2456;
+   load_raw = &CLASS unpacked_load_raw;
+   data_offset = 0;
+   filters = 0x94949494;
+   order = 0x4949;
+   maximum = 0x3fff;
+  } else if (!strcmp(model,"SVS625CL")) {
+   height = 2050;
+   width = 2448;
+   load_raw = &CLASS unpacked_load_raw;
+   data_offset = 0;
+   filters = 0x94949494;
+   order = 0x4949;
+   maximum = 0x0fff;
   }
 }
 
